--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node client.js & node server.js"
+    "start:client": "node client.js",
+    "start:server": "node server.js"
   },
   "author": "",
   "license": "ISC",
